Bugfix: z-index of sign buttons removed

--- a/abgabe/styles.css
+++ b/abgabe/styles.css
@@ -121,7 +121,6 @@ li {
     border-radius: 10px;
     font-weight  : 700;
     margin-left  : 40px;
-    z-index      : 2;
 }
 
 .sign-button {
